--- a/package.json
+++ b/package.json
@@ -72,10 +72,14 @@
 		]
 	},
 	"dependencies": {
+		"i18next": "^23.11.5",
+		"i18next-browser-languagedetector": "^8.0.0",
+		"i18next-http-backend": "^2.5.2",
 		"leaflet": "^1.9.4",
 		"prop-types": "^15.6.1",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
+		"react-i18next": "^14.1.2",
 		"react-leaflet": "^4.2.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "6.24"
