--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
 		]
 	},
 	"dependencies": {
+		"axios": "^1.7.2",
 		"i18next": "^23.11.5",
 		"i18next-browser-languagedetector": "^8.0.0",
 		"i18next-http-backend": "^2.5.2",
