--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
 		"react-leaflet": "^4.2.1",
 		"react-polyfills": "0.0.1",
 		"react-router-dom": "6.24",
+		"react-transition-group": "^4.4.5",
 		"swiper": "^11.1.4"
 	}
 }
